# OpenGL-learn

./: .gitignore  CMakeLists.txt  Camera.h  ErrorHandler.cpp  ErrorHandler.h  README.md  VAO.cpp  VAO.h  VertexBuffer.cpp  VertexBuffer.h  glad.c  main.cpp  p.hpp  shader.cpp  shader.h  test.sln  test.vcxproj  test.vcxproj.filters  texture.cpp  texture.h
Debug/: test.ilk  vc141.idb
Debug/shaders/: shader.glsl  shader1.glsl  shader2.glsl
Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
OpenGL-learn/: Camera.h  VAO.cpp  VAO.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  shader.h  stb_image_implementation.cpp  texture.h
cmake/: hunter.cmake
resources/models/: model.omod
resources/shaders/: fshader.glsl  vshader.glsl
shaders/: fshader.glsl  fshader2.glsl  vshader2.glsl
